examples/test/testpolicy18558.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18558
  namespace: namespace356
spec:
  podSelector:
    matchLabels:
      key32: value42
      key3: value47
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key30: value27
      podSelector:
        matchLabels:
          key19: value39
          key12: value15
